[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rabdam"
version = "0.1.0"
description = "RABDAM BDamage calculation tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gemmi",
    "numpy",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
